Update & Delete implementation (partial)